# hiwave-windows

./: .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.new  FINAL-STATUS-REPORT.md  INSTALL.md  LAUNCH-CHECKLIST.md  NATIVE-WIN32-IMPLEMENTATION.md  NATIVE-WIN32-PLAN.md  PARITY_PROGRESS.md  PROJECT-ASSESSMENT.md  README-RUN-MODES-FIX.md  README.md  TECHNICAL-AUDIT.md  package-windows.ps1  perf_baseline.json
.ai/: .gitignore  README.md  roadmap_index.json
.ai/reports/: 20260102T190634Z_582ac374_local-ci-emulator.verification.json  20260102T190712Z_240ab5c7_local-ci-emulator.verification.json  20260102T190744Z_7c8ebae3_local-ci-emulator.verification.json  20260102T191333Z_2e8f9185_local-ci-emulator.verification.json  20260102T191357Z_4fd52179_local-ci-emulator.verification.json  20260102T191915Z_2fdb2e6f_local-ci-emulator.verification.json  20260102T192342Z_6b73f99b_local-ci-emulator.verification.json  20260102T192601Z_eaed0426_local-ci-emulator.verification.json  20260102T192638Z_c61eee46_local-ci-emulator.verification.json  20260102T192850Z_f907add0_local-ci-emulator.verification.json  20260102T193007Z_ab931d8a_local-ci-emulator.verification.json  20260102T193109Z_0d3e9869_local-ci-emulator.verification.json  (+47 more)
baselines/: README.md  metadata.json
benches/: rustkit.rs
config/: diff_policy.json  perf_budgets.json
crates/hiwave-analytics/: Cargo.toml
crates/hiwave-analytics/src/: database.rs  lib.rs  types.rs
crates/hiwave-app/: Cargo.toml
crates/hiwave-app/src/: main.rs  main_win32.rs  shield_adapter.rs  state.rs  webview.rs  webview_rustkit.rs
crates/hiwave-app/src/import/: chrome.rs  converter.rs  firefox.rs  mod.rs
crates/hiwave-app/src/ipc/: commands.rs  mod.rs
crates/hiwave-app/src/native/: linux.rs  macos.rs  mod.rs  screenshot_harness.rs  win32.rs
crates/hiwave-app/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/hiwave-app/src/ui/: about.html  audio_detector.js  autofill.js  chrome.html  context_menu.js  find_in_page.js  new_tab.html  report.html  settings.html  shelf.html
crates/hiwave-core/: Cargo.toml
crates/hiwave-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/hiwave-shell/: Cargo.toml
crates/hiwave-shell/src/: lib.rs
crates/hiwave-shield/: Cargo.toml
crates/hiwave-shield/src/: filter_lists.rs  lib.rs
crates/hiwave-smoke/: Cargo.toml
crates/hiwave-smoke/src/: main.rs
crates/hiwave-vault/: Cargo.toml
crates/hiwave-vault/src/: lib.rs
crates/parity-capture/: Cargo.toml
crates/parity-capture/src/: main.rs
crates/rustkit-a11y/: Cargo.toml
crates/rustkit-a11y/src/: lib.rs  macos.rs
crates/rustkit-animation/: Cargo.toml
crates/rustkit-animation/src/: lib.rs
crates/rustkit-bench/: Cargo.toml
crates/rustkit-bench/src/: lib.rs
crates/rustkit-bindings/: Cargo.toml
crates/rustkit-bindings/src/: events.rs  lib.rs
crates/rustkit-canvas/: Cargo.toml
crates/rustkit-canvas/src/: lib.rs
crates/rustkit-codecs/: Cargo.toml
crates/rustkit-codecs/src/: lib.rs
crates/rustkit-common/: Cargo.toml
crates/rustkit-common/src/: lib.rs  logging.rs  retry.rs
crates/rustkit-compositor/: Cargo.toml
crates/rustkit-compositor/src/: lib.rs
crates/rustkit-core/: Cargo.toml
crates/rustkit-core/src/: history.rs  input.rs  lib.rs  lifecycle.rs
crates/rustkit-css/: Cargo.toml
crates/rustkit-css/src/: lib.rs
crates/rustkit-cssparser/: Cargo.toml
crates/rustkit-cssparser/src/: lib.rs
crates/rustkit-dom/: Cargo.toml
crates/rustkit-dom/src/: events.rs  forms.rs  images.rs  lib.rs
crates/rustkit-engine/: Cargo.toml
crates/rustkit-engine/src/: lib.rs
crates/rustkit-html/: Cargo.toml
crates/rustkit-html/src/: entities.rs  lib.rs  tokenizer.rs  tree_builder.rs
crates/rustkit-html/tests/: corpus_tests.rs
crates/rustkit-http/: Cargo.toml
crates/rustkit-http/src/: lib.rs
crates/rustkit-idb/: Cargo.toml
crates/rustkit-idb/src/: lib.rs
crates/rustkit-image/: Cargo.toml
crates/rustkit-image/src/: cache.rs  decode.rs  lib.rs  loader.rs
crates/rustkit-js/: Cargo.toml
crates/rustkit-js/src/: lib.rs
crates/rustkit-layout/: Cargo.toml
crates/rustkit-layout/src/: flex.rs  forms.rs  grid.rs  images.rs  lib.rs  scroll.rs  text.rs
crates/rustkit-media/: Cargo.toml
crates/rustkit-media/src/: lib.rs
crates/rustkit-net/: Cargo.toml
crates/rustkit-net/src/: download.rs  intercept.rs  lib.rs  security.rs
crates/rustkit-svg/: Cargo.toml
docs/: ACCEPTANCE-TESTS.md  CODE-INDEPENDENCE-ANALYSIS.md  CRITICAL-RENDERER-PLAN.md  EMBEDDER-HARNESS.md  HIWAVE-RUSTKIT.md  INSTALL-WINCAIRO.md  MACOS-PORT-PLAN.md  MIGRATION-RUSTKIT.md  MVP-REQUIREMENTS.md  PHASES-14-20-PLAN.md  PHASES-21-30-PLAN.md  POSTMORTEM-RENDERER-GAP.md  RUSTKIT-BINDINGS.md  RUSTKIT-COMMON.md  RUSTKIT-COMPOSITOR.md  RUSTKIT-CORE.md  RUSTKIT-CSS.md  RUSTKIT-DOM.md  RUSTKIT-ENGINE.md  RUSTKIT-JS.md  RUSTKIT-LAYOUT.md  RUSTKIT-NET.md  RUSTKIT-PERF.md  RUSTKIT-ROADMAP.md  RUSTKIT-TESTING.md  RUSTKIT-VIEWHOST.md  SHIELD-ARCHITECTURE.md  WEBKIT-FORK-SETUP.md  WINCAIRO-LIMITATIONS.md
fixtures/: borders_basic.html  forms_basic.html  gradient_basic.html  image_gallery.html  img_basic.html  inline-wrapper.html  interactive.html  layout_comprehensive.html  minmaxclamp.html  multisurface_chrome.html  multisurface_content.html  pseudo-elements.html  scroll_long.html  shadow_basic.html  typography.html
scripts/: aiorch_local.ps1  build-webkit.ps1  builtins_capture.ps1  builtins_diff.ps1  canary_golden_gate.ps1  capture_goldens.ps1  compare_layouts.py  generate_failure_packet.py  generate_workorders.py  layout_oracle_gate.py  live_site_smoke.ps1  multisurface_canary.ps1  parity_aggregate.py  parity_archive.py  parity_baseline.py  parity_compare.py  parity_gate.ps1  parity_gate.py  parity_lib.py  parity_rerun.py  parity_summary.py  parity_swarm.py  perf_check.py  run-native-win32.ps1  run-rustkit.ps1  run-webview2.ps1  setup-wincairo.ps1  static_suite_capture.ps1  visual_regression.ps1  visual_test_runner.ps1  websuite_capture.ps1  websuite_diff.ps1
websuite/: live-sites.json  manifest.json
(+229 files in other folders)
