[workspace]
resolver = "2"
members = [
    "crates/hiwave-core",
    "crates/hiwave-shield",
    "crates/hiwave-vault",
    "crates/hiwave-shell",
    "crates/hiwave-analytics",
    "crates/hiwave-app",
    "crates/hiwave-smoke",
    "crates/rustkit-viewhost",
    "crates/rustkit-compositor",
    "crates/rustkit-core",
    "crates/rustkit-dom",
    "crates/rustkit-css",
    "crates/rustkit-cssparser",
    "crates/rustkit-text",
    "crates/rustkit-codecs",
    "crates/rustkit-layout",
    "crates/rustkit-js",
    "crates/rustkit-bindings",
    "crates/rustkit-net",
    "crates/rustkit-image",
    "crates/rustkit-animation",
    "crates/rustkit-svg",
    "crates/rustkit-canvas",
    "crates/rustkit-webgl",
    "crates/rustkit-renderer",
    "crates/rustkit-media",
    "crates/rustkit-sw",
    "crates/rustkit-idb",
    "crates/rustkit-worker",
    "crates/rustkit-a11y",
    "crates/rustkit-http",
    "crates/rustkit-html",
    "crates/rustkit-engine",
    "crates/rustkit-common",
    "crates/rustkit-test",
    "crates/rustkit-bench",
    # Tools
    "tools/render-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HiWave Team"]
license = "MPL-2.0"
repository = "https://github.com/YOUR_USERNAME/hiwave"

[workspace.dependencies]
# Core
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["full"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

# WebView (Tauri ecosystem)
wry = "0.49"
tao = "0.31"
muda = "0.15"

# Ad blocking
adblock = "0.9"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Utilities
fuzzy-matcher = "0.3"
url = "2.5"
# reqwest removed - replaced by rustkit-http
rustkit-http = { path = "crates/rustkit-http" }
base64 = "0.22"
urlencoding = "2.1"
lru = "0.12"
dirs = "5.0"
rfd = "0.15"

# Internal dependencies - HiWave crates
hiwave-core = { path = "crates/hiwave-core" }
hiwave-shield = { path = "crates/hiwave-shield" }
hiwave-vault = { path = "crates/hiwave-vault" }
hiwave-shell = { path = "crates/hiwave-shell" }
hiwave-analytics = { path = "crates/hiwave-analytics" }
hiwave-app = { path = "crates/hiwave-app" }

# RustKit browser engine crates
rustkit-common = { path = "crates/rustkit-common" }
rustkit-viewhost = { path = "crates/rustkit-viewhost" }
rustkit-compositor = { path = "crates/rustkit-compositor" }
rustkit-core = { path = "crates/rustkit-core" }
rustkit-dom = { path = "crates/rustkit-dom" }
rustkit-css = { path = "crates/rustkit-css" }
rustkit-layout = { path = "crates/rustkit-layout" }
rustkit-js = { path = "crates/rustkit-js" }
rustkit-bindings = { path = "crates/rustkit-bindings" }
rustkit-net = { path = "crates/rustkit-net" }
rustkit-image = { path = "crates/rustkit-image" }
rustkit-engine = { path = "crates/rustkit-engine" }
rustkit-test = { path = "crates/rustkit-test" }
rustkit-bench = { path = "crates/rustkit-bench" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
