[workspace]
resolver = "2"
members = [
    "crates/hiwave-core",
    "crates/hiwave-shield",
    "crates/hiwave-vault",
    "crates/hiwave-shell",
    "crates/hiwave-analytics",
    "crates/hiwave-app",
    # TODO: Port parity-capture to Windows (needs headless view support)
    # "crates/parity-capture",
    "crates/rustkit-common",
    "crates/rustkit-core",
    "crates/rustkit-viewhost",
    "crates/rustkit-compositor",
    "crates/rustkit-dom",
    "crates/rustkit-css",
    "crates/rustkit-cssparser",
    "crates/rustkit-layout",
    "crates/rustkit-js",
    "crates/rustkit-bindings",
    "crates/rustkit-net",
    "crates/rustkit-image",
    "crates/rustkit-engine",
    "crates/rustkit-test",
    "crates/rustkit-bench",
    "crates/rustkit-html",
    "crates/rustkit-http",
    "crates/rustkit-codecs",
    "crates/rustkit-animation",
    "crates/rustkit-svg",
    "crates/rustkit-canvas",
    "crates/rustkit-webgl",
    "crates/rustkit-idb",
    "crates/rustkit-sw",
    "crates/rustkit-worker",
    "crates/rustkit-media",
    "crates/rustkit-text",
    "crates/rustkit-renderer",
    "crates/rustkit-a11y",
    "crates/hiwave-smoke",
    # Tools
    "tools/render-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HiWave Team"]
license = "MPL-2.0"
repository = "https://github.com/yourusername/hiwave"

[workspace.dependencies]
# Only keep what's actually used...
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
# Windows-only: disable Linux GTK features
wry = { version = "0.49", default-features = false, features = ["drag-drop", "protocol"] }
tao = { version = "0.31", default-features = false, features = ["rwh_06"] }
muda = "0.15"
adblock = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
fuzzy-matcher = "0.3"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
base64 = "0.22"
urlencoding = "2.1"
lru = "0.12"
dirs = "5.0"
rfd = "0.15"
pollster = "0.4"

# Internal dependencies
hiwave-core = { path = "crates/hiwave-core" }
hiwave-shield = { path = "crates/hiwave-shield" }
hiwave-vault = { path = "crates/hiwave-vault" }
hiwave-shell = { path = "crates/hiwave-shell" }
hiwave-analytics = { path = "crates/hiwave-analytics" }
hiwave-app = { path = "crates/hiwave-app" }

# RustKit browser engine crates
rustkit-common = { path = "crates/rustkit-common" }
rustkit-core = { path = "crates/rustkit-core" }
rustkit-viewhost = { path = "crates/rustkit-viewhost" }
rustkit-compositor = { path = "crates/rustkit-compositor" }
rustkit-dom = { path = "crates/rustkit-dom" }
rustkit-css = { path = "crates/rustkit-css" }
rustkit-cssparser = { path = "crates/rustkit-cssparser" }
rustkit-layout = { path = "crates/rustkit-layout" }
rustkit-js = { path = "crates/rustkit-js" }
rustkit-bindings = { path = "crates/rustkit-bindings" }
rustkit-net = { path = "crates/rustkit-net" }
rustkit-image = { path = "crates/rustkit-image" }
rustkit-engine = { path = "crates/rustkit-engine" }
rustkit-test = { path = "crates/rustkit-test" }
rustkit-bench = { path = "crates/rustkit-bench" }
rustkit-html = { path = "crates/rustkit-html" }
rustkit-http = { path = "crates/rustkit-http" }
rustkit-codecs = { path = "crates/rustkit-codecs" }
rustkit-animation = { path = "crates/rustkit-animation" }
rustkit-svg = { path = "crates/rustkit-svg" }
rustkit-canvas = { path = "crates/rustkit-canvas" }
rustkit-webgl = { path = "crates/rustkit-webgl" }
rustkit-idb = { path = "crates/rustkit-idb" }
rustkit-sw = { path = "crates/rustkit-sw" }
rustkit-worker = { path = "crates/rustkit-worker" }
rustkit-media = { path = "crates/rustkit-media" }
rustkit-text = { path = "crates/rustkit-text" }
rustkit-renderer = { path = "crates/rustkit-renderer" }
rustkit-a11y = { path = "crates/rustkit-a11y" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
