[package]
name = "hiwave-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
hiwave-core = { path = "../hiwave-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
