[package]
name = "hiwave-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HiWave browser application with RustKit engine"

[[bin]]
name = "hiwave"
path = "src/main.rs"

[features]
# Default to RustKit hybrid mode (RustKit for content, WebView2 for chrome UI)
default = ["rustkit"]
# RustKit: Pure Rust browser engine for content rendering
rustkit = ["rustkit-engine", "rustkit-viewhost", "rustkit-net", "wry", "tao", "muda", "windows", "tokio"]
# WebView fallback: Uses system WebView (WebView2/WebKit) for everything
webview-fallback = ["wry", "tao", "muda"]
# Native Win32: EXPERIMENTAL - Full native Windows app without wry/tao (work in progress)
# This uses RustKit for ALL rendering (Chrome UI, Content, Shelf)
native-win32 = ["rustkit-engine", "rustkit-viewhost", "rustkit-bindings", "rustkit-net", "windows", "tokio"]

[dependencies]
# WebView (for Chrome UI, Shelf, and secondary windows)
wry = { workspace = true, optional = true }
tao = { workspace = true, optional = true }
muda = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }

# URL handling
url = { workspace = true }
urlencoding = "2.1"

# Platform
dirs = { workspace = true }

# File dialogs
rfd = { workspace = true }

# Workspace crates
hiwave-core = { workspace = true }
hiwave-shell = { workspace = true }
hiwave-shield = { workspace = true }
hiwave-vault = { workspace = true }
hiwave-analytics = { workspace = true }
gtk = "0.18.2"

# RustKit engine (optional, Windows only)
[target.'cfg(target_os = "windows")'.dependencies]
rustkit-engine = { workspace = true, optional = true }
rustkit-viewhost = { workspace = true, optional = true }
rustkit-bindings = { workspace = true, optional = true }
rustkit-net = { workspace = true, optional = true }
windows = { version = "0.58", features = ["Win32_Foundation"], optional = true }
tokio = { version = "1.42", features = ["rt", "time"], optional = true }
