[package]
name = "hiwave-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hiwave-core = { workspace = true }
rusqlite = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true, features = ["std"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
url = { workspace = true }
sha2 = "0.10"
