[package]
name = "rustkit-compositor"
version = "0.1.0"
edition = "2021"
description = "GPU compositor with per-view swapchain support for RustKit"
authors = ["HiWave Team"]
license = "MIT"

[dependencies]
# GPU abstraction
wgpu = "24"
raw-window-handle = "0.6"

# Windows DirectComposition
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
] }

# ViewHost integration
rustkit-viewhost = { path = "../rustkit-viewhost" }

# Error handling
thiserror = "1.0"

# Tracing
tracing = "0.1"

# Async
pollster = "0.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

