[package]
name = "rustkit-html"
version = "0.1.0"
edition = "2021"
description = "HTML5 parser for RustKit browser engine"
license = "MIT"

[dependencies]
# Error handling
thiserror = "1"

# Logging
tracing = "0.1"

# Lazy static for entity table
lazy_static = "1.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

