[package]
name = "rustkit-idb"
version = "0.1.0"
edition = "2021"
description = "IndexedDB implementation for RustKit browser engine"
authors = ["HiWave Team"]
license = "MIT"

[dependencies]
# RustKit crates
rustkit-common = { path = "../rustkit-common" }

# Core
thiserror = "1.0"
tracing = "0.1"

# Async
tokio = { version = "1.42", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Collections
hashbrown = { version = "0.14", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

