[package]
name = "rustkit-net"
version = "0.1.0"
edition = "2021"
description = "HTTP networking, request interception, and downloads for RustKit"
authors = ["HiWave Team"]
license = "MIT"

[dependencies]
# HTTP client (RustKit-owned)
rustkit-http = { path = "../rustkit-http" }

# Async runtime
tokio = { version = "1.42", features = ["sync", "time", "fs", "io-util", "macros"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
url = "2.5"

# MIME types
mime = "0.3"
mime_guess = "2.0"

# Error handling
thiserror = "1.0"

# Tracing
tracing = "0.1"

# Bytes
bytes = "1.9"

# Headers
http = "1.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

